{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PlayerMain",
            "id": "b51d460d-799f-40d0-b614-8c5c59d2cdb7",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "805c4154-4a22-4f7f-82a9-33a2a93e0441",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MainAttack",
                    "type": "Button",
                    "id": "76238b3f-3d56-44fc-ab80-0dd6b91fcd32",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpecialAttack",
                    "type": "Button",
                    "id": "77fc48ee-cf5c-4c54-957b-95b4eb977d1c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9de47646-ea18-4d62-b849-b96f33f4e99a",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ccf4fbb9-d586-4026-9b09-303a76908dc2",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f417b750-faf8-4081-847d-068e6efac912",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpecialAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}